Horizontal Scroll issue on small screen fix : #root width removed & header left/right padding is removed.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-#root{
-  width:100%;
-}
 .App {
   display: flex;
   flex-flow: column nowrap;
@@ -18,7 +15,7 @@
   align-items: center;
   justify-content: center;
   font-size: 3em;
-  padding: 1rem;
+  padding: 1rem 0;
   margin-bottom: 2rem;
   text-align: center;
 }
